--- a/index.html
+++ b/index.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Calculator</title>
 </head>
 <body>
+
+    <h1>Calculator</h1>
+
+    <div class="calc">
+
+        <div class="first-row">
+            <div id="screen">
+                <div class="previous">1</div>
+                <div class="current">2</div>
+            </div>
+            <button class="btn clear">C</button>
+        </div>
+
+        <div class="second-row">
+            <button class="btn number">7</button>
+            <button class="btn number">8</button>
+            <button class="btn number">9</button>
+            <button class="btn operand">/</button>
+        </div>
+
+        <div class="third-row">
+            <button class="btn number">4</button>
+            <button class="btn number">5</button>
+            <button class="btn number">6</button>
+            <button class="btn operand">*</button>
+        </div>
+
+        <div class="fourth-row">
+            <button class="btn number">1</button>
+            <button class="btn number">2</button>
+            <button class="btn number">3</button>
+            <button class="btn operand">-</button>
+        </div>
+
+        <div class="fifth-row">
+            <button class="btn decimal">.</button>
+            <button class="btn number">0</button>
+            <button class="btn equal">=</button>
+            <button class="btn operand">+</button>
+        </div>
+
+    </div>
 
     <script src="./app.js"></script>
 
