--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
         <div class="first-row">
             <div id="screen">
-                <div class="previous">1</div>
-                <div class="current">2</div>
+                <div class="previous"></div>
+                <div class="current"></div>
             </div>
-            <button class="btn clear">C</button>
+            <button  id="clear-btn" class="btn clear">C</button>
         </div>
 
         <div class="second-row">
